# idyllic

./: Cargo.toml
data/: test
src/: app.rs  config.rs  event.rs  lib.rs  main.rs  parse.rs
